--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "immer": "^10.1.1",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-spinners": "^0.14.1",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
